--- a/vignettes/hmsidwR.Rmd
+++ b/vignettes/hmsidwR.Rmd
@@ -13,6 +13,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+
+options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
 ```{r setup}
