--- a/vignettes/articles/Case-Study-sdi90_19.Rmd
+++ b/vignettes/articles/Case-Study-sdi90_19.Rmd
@@ -12,6 +12,7 @@ ggplot2::theme_set(ggplot2::theme_minimal())
 
 ```{r setup, message=FALSE, warning=FALSE}
 library(hmsidwR)
+library(tidyverse)
 ```
 
 ```{r}
