--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,10 @@ Machine Learning Applications and Spatial Modeling Analysis with R** book.
 
 ## Installation
 
+``` r
+install.packages("hmsidwR")
+```
+
 You can install the development version of hmsidwR from [GitHub](https://github.com/) with:
 
 ``` r
