--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ options(rmarkdown.html_vignette.check_title = FALSE)
 
 <!-- badges: end -->
 
-The goal of `{hmsidwR}` is to provide the set of data used in the **Health Metrics and the Spread of Infectious Diseases Machine Learning Applications and Spatial Modelling Analysis** book. It also provides a set of functions to download data such as `getunz()`, and `gbd_get_data()` which allows the user to download data for the IHME SDG-API. With the `theme_hmsid()` is possible a customization of the ggplot2 theme, the `string_search()` function scan all folders and files to find a specific string. And, the `kbfit()` function fits a variogram models and then a set of kriging models to spatial data to select the best model based on metrics.
+The goal of `{hmsidwR}` is to provide the set of data used in the **Health Metrics and the Spread of Infectious Diseases Machine Learning Applications and Spatial Modelling Analysis** book. It also provides a set of functions to download data such as `getunz()`, and `gbd_get_data()` which allows the user to download data for the IHME SDG-API. With the `theme_hmsid()` is possible a customization of the ggplot2 theme, the `string_search()` function scan all folders and files to find a specific string. And, the `kbfit()` function fits a variogram model and then a set of kriging models to spatial data to select the best model based on metrics.
 
 ## Installation
 
@@ -29,7 +29,7 @@ The goal of `{hmsidwR}` is to provide the set of data used in the **Health Metri
 install.packages("hmsidwR")
 ```
 
-You can install the development version of hmsidwR from [GitHub](https://github.com/) with:
+You can install the development version of `hmsidwR`, which might be always a bit more updated than the CRAN version, from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
